--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 <html>
 <head>
-	<title>Emergence of State Representations in Embodied Sequence Modeling</title>
+	<title>Emergence of Abstract State Representations in Embodied Sequence Modeling</title>
 	<meta property="og:image" content="Path to my teaser.png"/> <!-- Facebook automatically scrapes this. Go to https://developers.facebook.com/tools/debug/ if you update and want to force Facebook to rescrape. -->
 	<meta property="og:title" content="Creative and Descriptive Paper Title." />
 	<meta property="og:description" content="Paper description." />
@@ -138,7 +138,7 @@
 <body>
 	<center>
 		<br>
-		<span style="font-size:36px "><b>Do Vision-Language Pretrained Models Learn Composable Primitive Concepts?</b></span>
+		<span style="font-size:36px "><b>Emergence of Abstract State Representations in Embodied Sequence Modeling</b></span>
 		<br>
 		<br>
 
@@ -200,12 +200,12 @@
 				<tr>
 					<td align=center width=120px>
 						<center>
-							<div class="buttons" style="margin-bottom: 8px;"><a class="btn btn-primary" role="button" href="https://grounded-seqmodel.github.io">Paper</a></div>
+							<div class="buttons" style="margin-bottom: 8px;"><a class="btn btn-primary" role="button" href="https://abstract-state-seqmodel-seqmodel.github.io">Paper</a></div>
 						</center>
 					</td>
 					<td align=center width=120px>
 						<center>
-							<div class="buttons" style="margin-bottom: 8px;"><a class="btn btn-primary" role="button" href="https://github.com/tttyuntian/abstract-state-seqmodel.git">Code</a></div>
+							<div class="buttons" style="margin-bottom: 8px;"><a class="btn btn-primary" role="button" href="https://github.com/brown-palm/abstract-state-seqmodel">Code</a></div>
 						</center>
 					</td>
 				</tr>
@@ -284,8 +284,8 @@
 		<tr>
 			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/paper.png"/></a></td>
 			<td><span style="font-size:14pt">Tian Yun*, Zilai Zeng, Kunal Handa, Ashish V. Thapliyal, Bo Pang, Ellie Pavlick, Chen Sun.<br>
-				<b>Emergence of State Representations in Embodied Sequence Modeling</b><br>
-				In TMLR.<br>
+				<b>Emergence of Abstract State Representations in Embodied Sequence Modeling</b><br>
+				In EMNLP 2023.<br>
 				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
 				<span style="font-size:4pt"><a href=""><br></a>
 				</span>
