--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 		<tr>
 			<td align=center width=400px>
 				<center>
-					<td><img class="round" style="width:450px" src="./resources/babai_illustration.png"/></td>
+					<td><img class="round" style="width:450px" src="./resources/babyai_illustration.png.png"/></td>
 				</center>
 			</td>
 		</tr>
