--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 <body>
 	<center>
 		<br>
-		<span style="font-size:36px "><b>Emergence of Abstract State Representations in Embodied Sequence Modeling</b></span>
+		<span style="font-size:36px "><b>Emergence of Abstract State Representations in <br> Embodied Sequence Modeling</b></span>
 		<br>
 		<br>
 
@@ -239,7 +239,7 @@
 		<tr>
 			<td align=center width=400px>
 				<center>
-					<td><img class="round" style="width:450px" src="./resources/babyai_illustration.png.png"/></td>
+					<td><img class="round" style="width:450px" src="./resources/babyai_illustration.png"/></td>
 				</center>
 			</td>
 		</tr>
