updated babyai section

--- a/index.html
+++ b/index.html
@@ -235,11 +235,11 @@
 
 	<center><h1>BabyAI</h1></center>
 
-	<table align=center width=400px>
+	<table align=center width=750px>
 		<tr>
-			<td align=center width=400px>
+			<td align=center width=750px>
 				<center>
-					<td><img class="round" style="width:450px" src="./resources/babyai_illustration.png"/></td>
+					<td><img class="round" style="width:750px" src="./resources/babyai_illustration.png"/></td>
 				</center>
 			</td>
 		</tr>
@@ -248,7 +248,10 @@
 		<center>
 			<tr>
 				<td>
-					WIP.
+				We use the <a href="https://minigrid.farama.org/environments/babyai/index.html">BabyAI</a> environment as a testbed to investigate this. The goal in this environment is to control an agent to navigate and interact in an <em>N</em> by <em>N</em> grid to follow the given language instructions (e.g., "go to the yellow key").
+
+				<br><br>
+				Above is a demonstration of a language-conditioned navigation task in BabyAI <em>GoToLocal</em> level where an agent (i.e., red triangle) needs to navigate to the target objects specified in the given instructions. This is an example trajectory where the agent achieves the goal of "go to the grey key": (A) The board is randomly initialized with the agent and 8 objects. (B) The agent navigates in the environment to try to approach the target object. (C) The agent keeps navigating until it reaches the target object.
 				</td>
 			</tr>
 		</center>
@@ -258,11 +261,11 @@
 
 	<center><h1>Methods</h1></center>
 
-	<table align=center width=400px>
+	<table align=center width=750px>
 		<tr>
-			<td align=center width=400px>
+			<td align=center width=750px>
 				<center>
-					<td><img class="round" style="width:450px" src="./resources/sequece_model_architecture.png"/></td>
+					<td><img class="round" style="width:750px" src="./resources/sequece_model_architecture.png"/></td>
 				</center>
 			</td>
 		</tr>
