--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 <body>
 	<center>
 		<br>
-		<span style="font-size:36px "><b>Emergence of Abstract State Representations <br> in Embodied Sequence Modelin</b></span>
+		<span style="font-size:36px "><b>Emergence of Abstract State Representations <br> in Embodied Sequence Modeling</b></span>
 		<br>
 		<br>
 
@@ -343,7 +343,7 @@
 		<center>
 			<tr>
 				<td>
-					We  perform probing on the internal activations of a pretrained Complete-State model and a pretrained Missing-State model.
+					We perform probing on the internal activations of a pretrained Complete-State model and a pretrained Missing-State model.
 					For Complete-State model, while the current state is explicitly fed to the model as part of its input, the poor performance of the randomly initialized weights confirms that this information is not trivially preserved in its internal activations - the model needs to be properly pretrained for that to happen. For Missing-State model, even though the current states are not explicitly given, they can be reconstructed reasonably well from the model's internal representations.
 				</td>
 			</tr>
@@ -419,7 +419,7 @@
 		<tr>
 			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/paper.png"/></a></td>
 			<td><span style="font-size:14pt">Tian Yun*, Zilai Zeng*, Kunal Handa, Ashish V. Thapliyal, Bo Pang, Ellie Pavlick, Chen Sun.<br>
-				<b>Emergence of Absrtract State Representations in Embodied Sequence Modeling</b><br>
+				<b>Emergence of Abstract State Representations in Embodied Sequence Modeling</b><br>
 				In TMLR.<br>
 				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
 				<span style="font-size:4pt"><a href=""><br></a>
