--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/paper.png"/></a></td>
 			<td><span style="font-size:14pt">Tian Yun*, Zilai Zeng*, Kunal Handa, Ashish V. Thapliyal, Bo Pang, Ellie Pavlick, Chen Sun.<br>
 				<b>Emergence of Abstract State Representations in Embodied Sequence Modeling</b><br>
-				In TMLR.<br>
+				In EMNLP 2023.<br>
 				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
 				<span style="font-size:4pt"><a href=""><br></a>
 				</span>
@@ -434,7 +434,7 @@
 			<tr>
 				<td style="background-color:#e1e1e1">
 					<pre><code>
-  @inproceedings{zeng2023gcpc,
+  @inproceedings{yun2023emergence,
 	title={Emergence of Abstract State Representations in Embodied Sequence Modeling},
 	author={Yun, Tian and Zeng, Zilai and Handa, Kunal and Thapliyal, Ashihs V. and Pang, Bo and Pavlick, Ellie and Sun, Chen},
 	booktitle={Proceedings of the 2023 Conference on Empirical Methods in Natural Language Processing},
