updated arxiv url

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 				<tr>
 					<td align=center width=120px>
 						<center>
-							<div class="buttons" style="margin-bottom: 8px;"><a class="btn btn-primary" role="button" href="https://abstract-state-seqmodel.github.io">[Paper]</a></div>
+							<div class="buttons" style="margin-bottom: 8px;"><a class="btn btn-primary" role="button" href="https://arxiv.org/abs/2311.02171">[Paper]</a></div>
 						</center>
 					</td>
 					<td align=center width=120px>
@@ -417,7 +417,7 @@
 	<table align=center width=650px>
 		<center><h1>Paper and BibTex</h1></center>
 		<tr>
-			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/paper.png"/></a></td>
+			<td><img class="layered-paper-big" style="height:175px" src="./resources/paper.png"/></td>
 			<td><span style="font-size:14pt">Tian Yun*, Zilai Zeng*, Kunal Handa, Ashish V. Thapliyal, Bo Pang, Ellie Pavlick, Chen Sun.<br>
 				<b>Emergence of Abstract State Representations in Embodied Sequence Modeling</b><br>
 				In EMNLP 2023.<br>
