--- a/index.html
+++ b/index.html
@@ -434,10 +434,11 @@
 			<tr>
 				<td style="background-color:#e1e1e1">
 					<pre><code>
-  @inproceedings{yun2023emergence,
+  @article{yun2023emergence,
 	title={Emergence of Abstract State Representations in Embodied Sequence Modeling},
-	author={Yun, Tian and Zeng, Zilai and Handa, Kunal and Thapliyal, Ashihs V. and Pang, Bo and Pavlick, Ellie and Sun, Chen},
-	booktitle={Proceedings of the 2023 Conference on Empirical Methods in Natural Language Processing},
+	author={Tian Yun and Zilai Zeng and Kunal Handa and Ashish V Thapliyal and Bo Pang and Ellie Pavlick and Chen Sun},
+	journal={arXiv preprint arXiv:2311.02171},
+	year={2023}
   }
 					</code></pre>
 				</td>
