--- a/index.html
+++ b/index.html
@@ -434,10 +434,10 @@
 			<tr>
 				<td style="background-color:#e1e1e1">
 					<pre><code>
-  @article{yun2023emergence,
+  @inproceedings{yun2023emergence,
 	title={Emergence of Abstract State Representations in Embodied Sequence Modeling},
 	author={Tian Yun and Zilai Zeng and Kunal Handa and Ashish V Thapliyal and Bo Pang and Ellie Pavlick and Chen Sun},
-	journal={arXiv preprint arXiv:2311.02171},
+	booktitle={Proceedings of the Conference on Empirical Methods in Natural Language Processing},
 	year={2023}
   }
 					</code></pre>
